Add a Twig extension that returns the latest automated snapshot id of a specified RDS instance.

--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -85,3 +85,10 @@ services:
         class:  ROH\Bundle\StackManagerBundle\TwigExtension\CidrTwigExtension
         tags:
             - { name: twig.extension }
+
+    roh_stack_manager.twig.rds:
+        class:  ROH\Bundle\StackManagerBundle\TwigExtension\RdsTwigExtension
+        arguments:
+            - @platinum_pixs_aws.base
+        tags:
+            - { name: twig.extension }
