Add the Temporal Scaling bundle, this provides the ability to automatically scale stacks based on a Google Calendar.

--- a/app/Resources/config/sample.yml
+++ b/app/Resources/config/sample.yml
@@ -9,4 +9,8 @@ environments:
 scaling_profiles:
     sample:
         default:
+            InstanceType: m3.large
+        Day:
+            InstanceType: m3.xlarge
+        Night:
             InstanceType: m3.medium
