--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -13,3 +13,6 @@ platinum_pixs_aws:
         key: %aws_access_key_id%
         secret: %aws_secret_key%
         region: %aws_region%
+
+roh_temporal_scaling:
+    calendar_sources: {}
