Add a Twig function to get a tag of a RDS instance.

--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -90,5 +90,6 @@ services:
         class:  ROH\Bundle\StackManagerBundle\TwigExtension\RdsTwigExtension
         arguments:
             - @platinum_pixs_aws.base
+            - %aws_region%
         tags:
             - { name: twig.extension }
