Add a command to list all stacks managed by the stack manager.

--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -40,6 +40,14 @@ services:
         tags:
             - { name: console.command }
 
+    roh_stack_manager.command.list_stacks:
+        class: ROH\Bundle\StackManagerBundle\Command\ListStacksCommand
+        arguments:
+            - @roh_stack_manager.mapper.stack_api
+        tags:
+            - { name: console.command }
+
+
     roh_stack_manager.command.list_templates:
         class: ROH\Bundle\StackManagerBundle\Command\ListTemplatesCommand
         arguments:
