Add a Twig function that gets the latest EC2 image with a given owner alias and description, this allows images provided by Amazon that are periodically replaced (e.g. for security updates) to continue to be referenced correctly after the original is deleted (reducing risk of catastrophic stack update problems).

--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -101,6 +101,13 @@ services:
         tags:
             - { name: twig.extension }
 
+    roh_stack_manager.twig.ec2:
+        class:  ROH\Bundle\StackManagerBundle\TwigExtension\Ec2TwigExtension
+        arguments:
+            - @platinum_pixs_aws.base
+        tags:
+            - { name: twig.extension }
+
     roh_stack_manager.twig.rds:
         class:  ROH\Bundle\StackManagerBundle\TwigExtension\RdsTwigExtension
         arguments:
