--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "sensio/distribution-bundle": "3.0.*",
         "twig/twig" : "1.18.*",
         "phpspec/php-diff": "1.0.*",
-        "google/apiclient": "1.1.*"
+        "google/apiclient": "1.1.*",
+        "seld/jsonlint" : "1.3.*"
     },
     "scripts": {
         "post-install-cmd": [
