--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,17 @@
         "psr-4": { "ROH\\Bundle\\": "src/" }
     },
     "require": {
-        "php": ">=5.5.0",
-        "symfony/symfony": "2.7.*",
-        "platinumpixs/aws-symfony2-bundle": "1.1.*",
-        "phpunit/phpunit": "4.6.*",
-        "symfony/monolog-bundle": "2.7.*",
-        "sensio/generator-bundle": "2.5.*",
-        "sensio/distribution-bundle": "3.0.*",
-        "twig/twig" : "1.18.*",
-        "phpspec/php-diff": "1.0.*",
         "google/apiclient": "1.1.*",
-        "seld/jsonlint" : "1.3.*"
+        "php": ">=5.5.0",
+        "phpspec/php-diff": "1.0.*",
+        "phpunit/phpunit": "4.6.*",
+        "platinumpixs/aws-symfony2-bundle": "1.1.*",
+        "seld/jsonlint" : "1.3.*",
+        "sensio/distribution-bundle": "3.0.*",
+        "sensio/generator-bundle": "2.5.*",
+        "symfony/monolog-bundle": "2.7.*",
+        "symfony/symfony": "2.7.*",
+        "twig/twig" : "1.18.*"
     },
     "scripts": {
         "post-install-cmd": [
