--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "symfony/symfony": "2.7.*",
         "twig/twig" : "1.19.*"
     },
+    "require-dev": {
+        "fabpot/php-cs-fixer": "1.10.*"
+    },
     "scripts": {
         "post-install-cmd": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
