--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "royaloperahouse/stack-manager",
     "description": "Tool for managing AWS CloudFormation stacks",
     "autoload": {
-        "psr-4": { "ROH\\Bundle\\": "src/" }
+        "psr-4": {
+            "ROH\\Bundle\\": "src/"
+        }
     },
     "require": {
         "google/apiclient": "1.1.*",
@@ -10,12 +12,12 @@
         "phpspec/php-diff": "1.0.*",
         "phpunit/phpunit": "4.7.*",
         "platinumpixs/aws-symfony2-bundle": "1.2.*",
-        "seld/jsonlint" : "1.3.*",
+        "seld/jsonlint": "1.3.*",
         "sensio/distribution-bundle": "4.0.*",
         "sensio/generator-bundle": "2.5.*",
         "symfony/monolog-bundle": "2.7.*",
         "symfony/symfony": "2.7.*",
-        "twig/twig" : "1.19.*"
+        "twig/twig": "1.19.*"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.10.*"
