Add two additional Twig extensions, one to get the source snapshot of an EBS volume and another to get the physical resource id of a resource in a CloudFormation stack.

--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -94,6 +94,13 @@ services:
         tags:
             - { name: twig.extension }
 
+    roh_stack_manager.twig.cloudformation:
+        class:  ROH\Bundle\StackManagerBundle\TwigExtension\CloudFormationTwigExtension
+        arguments:
+            - @platinum_pixs_aws.base
+        tags:
+            - { name: twig.extension }
+
     roh_stack_manager.twig.ebs:
         class:  ROH\Bundle\StackManagerBundle\TwigExtension\EbsTwigExtension
         arguments:
