- Add a new command to check all stacks for changes between the current configuration and the running stack. - Add a basic test suite with 100% coverage of the model classes.

--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -47,6 +47,13 @@ services:
         tags:
             - { name: console.command }
 
+    roh_stack_manager.command.check_stacks:
+        class: ROH\Bundle\StackManagerBundle\Command\CheckStacksCommand
+        arguments:
+            - @roh_stack_manager.mapper.stack_api
+            - @roh_stack_manager.mapper.stack_config
+        tags:
+            - { name: console.command }
 
     roh_stack_manager.command.list_templates:
         class: ROH\Bundle\StackManagerBundle\Command\ListTemplatesCommand
