--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "phpunit/phpunit": "4.7.*",
         "platinumpixs/aws-symfony2-bundle": "1.2.*",
         "seld/jsonlint": "1.3.*",
+        "sensio/buzz-bundle": "dev-master",
         "sensio/distribution-bundle": "4.0.*",
         "sensio/generator-bundle": "2.5.*",
         "symfony/monolog-bundle": "2.7.*",
@@ -36,5 +37,7 @@
     },
     "config": {
         "bin-dir": "bin"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
