--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -88,6 +88,8 @@ services:
 
     roh_stack_manager.service.template_expansion:
         class: ROH\Bundle\StackManagerBundle\Service\TemplateExpansionService
+        arguments:
+            - @buzz
 
     roh_stack_manager.twig.cidr:
         class:  ROH\Bundle\StackManagerBundle\TwigExtension\CidrTwigExtension
