--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,33 @@
 {
     "name": "royaloperahouse/stack-manager",
+    "license": "MIT",
+    "type": "project",
     "description": "Tool for managing AWS CloudFormation stacks",
     "autoload": {
         "psr-4": {
             "ROH\\Bundle\\": "src/"
-        }
+        },
+        "classmap": [
+            "app/AppKernel.php",
+            "app/AppCache.php"
+        ]
     },
     "require": {
         "google/apiclient": "1.1.*",
         "php": ">=5.5.0",
         "phpspec/php-diff": "1.0.*",
-        "phpunit/phpunit": "4.7.*",
+        "phpunit/phpunit": "5.1.*",
         "platinumpixs/aws-symfony2-bundle": "1.2.*",
-        "seld/jsonlint": "1.3.*",
-        "sensio/buzz-bundle": "dev-master",
-        "sensio/distribution-bundle": "4.0.*",
-        "sensio/generator-bundle": "2.5.*",
+        "seld/jsonlint": "1.4.*",
+        "sensio/buzz-bundle": "1.0.*",
+        "sensio/distribution-bundle": "5.0.*",
+        "sensio/generator-bundle": "3.0.*",
         "symfony/monolog-bundle": "2.7.*",
         "symfony/symfony": "2.7.*",
         "twig/twig": "1.19.*"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "1.10.*"
+        "fabpot/php-cs-fixer": "1.11.*"
     },
     "scripts": {
         "post-install-cmd": [
@@ -37,7 +43,5 @@
     },
     "config": {
         "bin-dir": "bin"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
