Add Twig extension to the the latest CodeDeploy revision for an application.

--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -121,6 +121,13 @@ services:
         tags:
             - { name: twig.extension }
 
+    roh_stack_manager.twig.codedeploy:
+        class:  ROH\Bundle\StackManagerBundle\TwigExtension\CodeDeployTwigExtension
+        arguments:
+            - @aws.codedeploy
+        tags:
+            - { name: twig.extension }
+
     roh_stack_manager.twig.ebs:
         class:  ROH\Bundle\StackManagerBundle\TwigExtension\EbsTwigExtension
         arguments:
