Use CloudFormation API to get template bodies instead of using the S3 URL.

--- a/src/StackManagerBundle/Resources/config/services.yml
+++ b/src/StackManagerBundle/Resources/config/services.yml
@@ -108,6 +108,7 @@ services:
         class: ROH\Bundle\StackManagerBundle\Service\TemplateExpansionService
         arguments:
             - @buzz
+            - @aws.cloudformation
 
     roh_stack_manager.twig.cidr:
         class:  ROH\Bundle\StackManagerBundle\TwigExtension\CidrTwigExtension
